# bittool

./: .gitignore  CMakeLists.txt  README.md  bittool.c  bittool.cpp  bittool.h
codec/: bin.c  doubler.c  fec.c  gen.c  hdlc.c  hex.c  invert.c  manchester.c  pass.c  serial.c  tripler.c
